More tests, bug fixes, robustness improvements